--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@ function sin() {
 </script>
 </head>
 <body>
- <h1>Calculadora de Sergio Framiñán García</h1>
+ <h1>Calculadora de Álvaro Ollero Martín</h1>
  Number:
  <input type="text" id="n1">
  <p>
